# SFML-NHZ

./: .gitignore  CMakeLists.txt
src/: Board.cpp  Board.h  Button.cpp  Button.h  Cell.cpp  Cell.h  Game.cpp  Game.h  Slider.cpp  Slider.h
src/Config/: difficulty.ini  gamestate_keybinds.ini  save.txt  supported_keys.ini  window.ini
src/Config/Themes/: GrayScale.txt
src/States/: CustomDiffState.cpp  CustomDiffState.h  CustomState.cpp  CustomState.h  DifficulltyState.cpp  DifficulltyState.h  EndGameState.cpp  EndGameState.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h  StateInterfaces.hpp
